[tool.poetry]
name = "vector-db"
version = "0.1.0"
description = "A personal project exploring semantic search and document indexing with multiple vector index implementations"
authors = ["María Benavente"]
readme = "README.md"
packages = [{include = "vector_db", from = "src"}]
keywords = ["vector-database", "semantic-search", "fastapi", "rag", "embeddings", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
numpy = "^1.26.0"
structlog = "^23.2.0"
cohere = "^5.15.0"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.0.0"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
mypy_path = "src"
packages = ["vector_db"]
explicit_package_bases = true
no_implicit_optional = false
warn_return_any = false
warn_unused_ignores = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
